# Voting-System

./: .gitignore  README.md  ieeeSoftwareRequirements.docx  ~$eeSoftwareRequirements.docx  ~WRL2651.tmp  ~WRL4035.tmp
Project1/: CMakeLists.txt  Makefile  README.md
Project1/documentation/: CMakeLists.txt  Doxyfile.in
Project1/src/: AuditLog.cc  AuditLog.h  Ballot.cc  Ballot.h  CMakeLists.txt  Election.cc  Election.h  ElectionFactory.cc  ElectionFactory.h  IRBallot.cc  IRBallot.h  IRCandidate.cc  IRCandidate.h  IRElection.cc  IRElection.h  Loggable.cc  Loggable.h  MediaReport.cc  MediaReport.h  OPLBallot.cc  OPLBallot.h  OPLCandidate.cc  OPLCandidate.h  OPLElection.cc  OPLElection.h  OPLParty.cc  OPLParty.h  TieBreaker.cc  TieBreaker.h  main.cc
Project1/testing/: CMakeLists.txt  test.cc  test_AuditLog.cc  test_AuditLog.h  test_Ballot.cc  test_Ballot.h  test_Election.cc  test_Election.h  test_ElectionFactory.cc  test_ElectionFactory.h  test_IRBallot.cc  test_IRBallot.h  test_IRCandidate.cc  test_IRCandidate.h  test_IRElection.cc  test_IRElection.h  test_Loggable.cc  test_MediaReport.cc  test_MediaReport.h  test_OPLBallot.cc  test_OPLBallot.h  test_OPLCandidate.cc  test_OPLCandidate.h  test_OPLElection.cc  test_OPLElection.h  test_OPLElection_ex1.csv  test_OPLParty.cc  test_OPLParty.h  test_TieBreaker.cc
Project1/testing/ballot_files/: IR_twoWayTie.csv  generate_random_test.py  ir_majorityPopularVote.csv  ir_noMajority.csv  ir_no_majority.csv  ir_oneCandidate.csv  ir_singleVote.csv  opl_candidateTie.csv  opl_partyTie.csv
Project1/testing/logs/: log.txt
Project2/: Makefile  README.md  sprint_backlog
Project2/documentation/: .gitignore  Doxyfile.in
Project2/sprint_backlog/: Initial_Sprint_Backlog.xlsx
Project2/src/: Ballot.cc  Ballot.h  BallotFile.cc  BallotFile.h  CMakeLists.txt  Election.cc  Election.h  ElectionFactory.cc  ElectionFactory.h  IRBallot.cc  IRBallotFactory.cc  IRBallotFactory.h  IRBallotFile.cc  IRBallotFile.h  IRElection.cc  IRElection.h  Loggable.h  OPLBallot.cc  OPLBallot.h  OPLBallotFactory.cc  OPLBallotFactory.h  OPLBallotFile.cc  OPLBallotFile.h  OPLCandidate.cc  OPLElection.cc  OPLElection.h  OPLParty.cc  OPLParty.h  POBallot.cc  POBallot.h  POCandidate.cc  POCandidate.h  POElection.cc  POElection.h  POParty.cc  POParty.h  TieBreaker.h  Validator.cc  Validator.h  main.cc
Project2/testing/: CMakeLists.txt  CMakeLists.txt.in  test_AuditLog.h  test_Election.h  test_ElectionFactory.h  test_IRBallot.h  test_IRBallotFactory.cc  test_IRBallotFactory.h  test_IRBallotFile.cc  test_IRBallotFile.h  test_IRCandidate.cc  test_IRElection.cc  test_Loggable.h  test_MediaReport.h  test_OPLBallot.cc  test_OPLBallotFactory.cc  test_OPLBallotFactory.h  test_OPLBallotFile.cc  test_OPLBallotFile.h  test_OPLCandidate.cc  test_OPLCandidate.h  test_OPLElection.cc  test_OPLParty.cc  test_OPLParty.h  test_TieBreaker.h  test_Validator.cc  test_Validator.h
Project2/testing/ballot_files/: generate_random_opl.py  ir_half_first.csv  ir_half_second.csv  ir_majorityPopularVote.csv  opl_candidateTie.csv  opl_half_second.csv  opl_morePartiesThanSeats.csv  opl_partyTie.csv  opl_singleSeatWinner.csv
SRS/: README.md
